qterminal-1.1.0 / 2022-04-15
=============================
 * Updated README.md.
 * Fixed max. value of drop-down width/height spin-box.
 * Use explicit QFlags default constructor instead of nullptr.
 * Changed the relation between unlimited history and history size (selecting unlimited history now disables the history size spinbox).
 * Activate bookmarks according to platform click behavior.
 * Enabled bookmark filtering.
 * Cleaned up bookmarks tree.
 * No hidden parent for dropdown window (fixes several old issues).
 * Fixed closing of last tab with prompt.
 * Never show close prompt when explicitly ending session from terminal.
 * Don't toggle drop-down terminal if it has modal dialog.
 * Added bookmarks examples.
 * Added a shortcut entry for drop-down shortcut.
 * Fixed a minor problem in full-screening in drop-down mode.
 * Improved the Bookmarks page of QTerminal's settings dialog.
 * Fixed focus change on showing/hiding bookmarks dock.
 * Fixed updating of shortcuts on tab switching/removal/creation.
 * Fixed right clicking of an empty area of tabbar.

qterminal-1.0.0 / 2021-11-04
=============================
 * Bumped minimum required Qt version to 5.15.
 * Respect preset splitting on opening new window and double clicking tab-bar.
 * Trim shell strings.
 * Added an option for keeping drop-down window open.
 * Don't try to move window under Wayland (fixes menu positions).

qterminal-0.17.0 / 2021-04-15
=============================
  * Some code cleanup and modernization.
  * Removed two warnings that were shown when QTerminal was started.
  * Added an option to disable bracketed paste mode.
  * Moved the paste-related codes to qtermwidget.
  * Made "Action after paste" clearer and default to "Scrolling to bottom".
  * Added a tooltip about bracketed paste mode.
  * Added modes for background image.

qterminal-0.16.1 / 2020-11-14
=============================
  * Fixed a mistake in the layout of Terminal settings dialog.